Remove top margin from mobile modal to prevent button being off screen

--- a/src/sass/base/_modal.scss
+++ b/src/sass/base/_modal.scss
@@ -21,7 +21,6 @@
     position: fixed;
     padding: 1.5rem;
     top: 0;
-    margin-top: 2rem;
     width: 100%;
     transform: translate(-50%, 0%);
   }
